apps/media/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr-service
  namespace: media
spec:
  selector:
    app: seerr
  ports:
    - port: 5055
      targetPort: 5055
  type: ClusterIP
