apps/media/seerr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr-tls
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`seerr.k3s.besthomelab.tech`)
      kind: Rule
      services:
        - name: seerr-service
          port: 5055
  tls: {}
